large commit. Components, utils, etc

--- a/about.html
+++ b/about.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>services</title>
   </head>
-  <body class="bg-bg-primary text-white font-montserrat pt-17.5">
+  <body
+    class="bg-bg-primary text-white font-montserrat pt-17.5 min-h-screen flex flex-col"
+  >
     <header class="bg-bg-secondary fixed top-0 left-0 right-0 z-1">
       <div class="custom-container py-[15px] flex justify-between items-center">
         <a href="/" class="flex items-end gap-2.5">
@@ -15,7 +17,7 @@
           <span class="font-josefin text-4xl/[1]">draganov</span>
         </a>
         <nav>
-          <ul class="flex gap-25px text-additional">
+          <ul class="flex gap-25px">
             <li>
               <a href="about.html">Обо мне</a>
             </li>
@@ -35,7 +37,7 @@
         </nav>
       </div>
     </header>
-    <main>
+    <main class="flex-1">
       <div
         class="py-12.5 bg-[url('../assets/images/studio.jpg')] bg-center bg-cover overlay"
       >
@@ -44,7 +46,131 @@
         </h1>
       </div>
       <section>
-        <div class="custom-container pt-12.5 pb-25"></div>
+        <div class="custom-container pt-12.5 pb-25 flex flex-col gap-25px">
+          <div class="flex gap-25px items-start">
+            <div class="flex-1 flex flex-col gap-[15px]">
+              <p>
+                Меня зовут Дима Драганов, я мультидисциплинарный звукорежиссёр и
+                саунд-дизайнер. Работаю на пересечении музыкального продакшна,
+                постпродакшна и аудио для медиапроектов. Мне 27 лет, и за
+                последние годы я успел поработать с артистами, брендами,
+                подкастами, видеостудиями и digital-проектами, помогая им
+                находить свой уникальный звуковой язык.
+              </p>
+              <h2 class="text-2xl font-semibold">Как всё началось</h2>
+              <p>
+                С раннего возраста я обращал внимание на то, что другие часто не
+                замечают — на атмосферу пространства, нюансы речи, характер
+                шума. Я рос в обычном городе, но звуки вокруг меня всегда были
+                чем-то большим, чем просто фоном. Уже в подростковом возрасте я
+                записывал окружающую среду, экспериментировал с микрофонами и
+                делал первые аранжировки. Ранний опыт работы в локальном
+                медиахабе научил меня уважать профессию: я прошёл через
+                обработку «грязной» речи, монтаж дикторских текстов, простые
+                рекламные ролики и live-записи. Тогда я понял, что хочу
+                развиваться сразу в нескольких направлениях, а не замыкаться в
+                одном жанре или формате.
+              </p>
+              <h2 class="text-2xl font-semibold">Образование и развитие</h2>
+              <p>
+                Я получил профильное образование звукорежиссёра, но ключевые
+                навыки приобрёл в реальных проектах. Работал ассистентом на
+                небольших студиях, участвовал в онлайн-воркшопах, много
+                экспериментировал, постоянно пробовал новые инструменты и
+                техники. Моя философия проста: звук меняется каждый год, и важно
+                оставаться в движении.
+              </p>
+            </div>
+            <img
+              class="aspect-3/4 object-cover min-w-0 w-100 object-center"
+              src="/photo1.jpg"
+              alt="Я в студии приложил наушник к уху"
+            />
+          </div>
+          <div class="flex gap-25px">
+            <img
+              class="w-112.5 object-cover h-full"
+              src="/photo2.jpg"
+              alt="Я в студии, повернут к камере"
+            />
+            <div class="flex-1 flex flex-col gap-[15px]">
+              <h2 class="text-2xl font-semibold text-accent">
+                Что я делаю сейчас
+              </h2>
+              <p>Сегодня я работаю в нескольких направлениях одновременно:</p>
+              <ul class="flex flex-col gap-[15px]">
+                <li>
+                  <strong>Музыкная часть</strong>
+                  <ul class="list-disc list-inside">
+                    <li>сведение и мастеринг треков;</li>
+                    <li>аранжировки и продакшн для артистов и брендов;</li>
+                    <li>
+                      создание чистого, современного саунда, ориентированного на
+                      стриминги, соцсети и выступления.
+                    </li>
+                  </ul>
+                </li>
+                <li>
+                  <strong>Речь и подкасты</strong>
+                  <ul class="list-disc list-inside">
+                    <li>
+                      обработка голоса для подкастов, интервью и видеоконтента;
+                    </li>
+                    <li>
+                      аудиочистка, монтаж, шумоподавление, выравнивание тембра;
+                    </li>
+                    <li>создание фирменного звучания и музыкальных интро.</li>
+                  </ul>
+                </li>
+                <li>
+                  <strong>Постпродакшн и коммерческие проекты</strong>
+                  <ul class="list-disc list-inside">
+                    <li>саунд-дизайн для видео, реклам, презентаций;</li>
+                    <li>создание амбиентов, SFX, UI-звуков;</li>
+                    <li>
+                      работа с loudness-нормами, озвучка и финальный микс для
+                      площадок.
+                    </li>
+                  </ul>
+                </li>
+                <li>
+                  <strong>Креатив и бренды</strong>
+                  <ul class="list-disc list-inside">
+                    <li>звуковые логотипы;</li>
+                    <li>короткие ролики и музыкальные темы;</li>
+                    <li>звук для digital-кампаний и визуального контента.</li>
+                  </ul>
+                </li>
+              </ul>
+              <p>
+                Мне нравится работать там, где пересекаются творчество и
+                технология. Я не делю проекты на «большие» и «маленькие» —
+                важно, чтобы звук был честным, функциональным и живым.
+              </p>
+            </div>
+          </div>
+          <div class="flex flex-col gap-[15px]">
+            <h2 class="text-2xl font-semibold text-accent">Подход</h2>
+            <p>
+              Главный принцип моей работы — понимать контекст. Я стремлюсь не
+              просто улучшить звук, а помочь проекту говорить правильным тоном.
+              Для этого я много времени уделяю деталям, атмосфере и характеру
+              звучания. Я ценю простую и ясную коммуникацию, люблю честный
+              диалог и всегда стремлюсь к тому, чтобы вместе с клиентом найти
+              правильное решение, а не просто закрыть задачу.
+            </p>
+            <h2 class="text-2xl font-semibold">Сегодня</h2>
+            <p>
+              Сейчас я работаю как независимый звукорежиссёр и сотрудничаю со
+              студиями, артистами и креативными командами по всему миру.
+              Постоянно изучаю новые инструменты, тренды и подходы — от
+              современного поп-саунда до аудио для интерактивных медиа. Звук для
+              меня — это способ создавать атмосферу, эмоции и идентичность. И я
+              рад, когда могу помочь сделать проект чуть более живым,
+              выразительным и точным.
+            </p>
+          </div>
+        </div>
       </section>
     </main>
     <footer class="bg-bg-secondary">
@@ -61,21 +187,21 @@
             <li>
               <ul class="flex gap-2.5">
                 <li>
-                  <a href="#">
+                  <a href="https://web.telegram.org">
                     <svg class="fill-additional w-25px aspect-square">
                       <use href="/sprite.svg#telegram" />
                     </svg>
                   </a>
                 </li>
                 <li>
-                  <a href="#">
+                  <a href="https://www.tiktok.com/explore">
                     <svg class="fill-additional w-25px aspect-square">
                       <use href="/sprite.svg#tiktok" />
                     </svg>
                   </a>
                 </li>
                 <li>
-                  <a href="#">
+                  <a href="https://www.youtube.com/">
                     <svg
                       class="fill-additional w-25px aspect-square"
                       viewBox="0 0 24 24"
@@ -93,12 +219,12 @@
             </li>
           </ul>
         </div>
-        <div class="flex items-end gap-2.5">
+        <a href="/" class="flex items-end gap-2.5">
           <svg class="h-10 w-10 fill-current">
             <use href="/sprite.svg#wave" />
           </svg>
           <span class="font-josefin text-4xl/[1]">draganov</span>
-        </div>
+        </a>
       </div>
     </footer>
     <script type="module" src="/src/main.ts"></script>
